<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.rvvsanchez.libs.event.publisher</groupId>
  <artifactId>webhook-parent</artifactId>
  <packaging>pom</packaging>
  <version>0.1.0-SNAPSHOT</version>
  
  <name>Webhook Library Parent</name>
  <description>Java library to publish events using webhooks</description>
  <url>https://github.com/robson-sanchez/java-webhook-publisher</url>
  <inceptionYear>2017</inceptionYear>
  
  <properties>
  	<maven.compiler.source>1.8</maven.compiler.source>
  	<maven.compiler.target>1.8</maven.compiler.target>
  	
  	<maven.gpg.plugin>1.6</maven.gpg.plugin>
  	<maven.javadoc.plugin>2.9.1</maven.javadoc.plugin>
  	<maven.source.plugin>3.0.1</maven.source.plugin>
  	
  	<cobertura.version>2.7</cobertura.version>
  	<junit.version>4.12</junit.version>
  	<powermock.version>1.7.1</powermock.version>
  </properties>
  
  <dependencyManagement>
  	<dependencies>  	
	  	<dependency>
	  		<groupId>junit</groupId>
	  		<artifactId>junit</artifactId>
	  		<version>${junit.version}</version>
	  		<scope>test</scope>
	  	</dependency>
	  	
	  	<dependency>
	  		<groupId>org.powermock</groupId>
	  		<artifactId>powermock-module-junit4</artifactId>
	  		<version>${powermock.version}</version>
	  		<scope>test</scope>
	  	</dependency>
	  	
	  	<dependency>
	  		<groupId>org.powermock</groupId>
	  		<artifactId>powermock-api-mockito2</artifactId>
	  		<version>${powermock.version}</version>
	  		<scope>test</scope>
	  	</dependency>
  	</dependencies>
  </dependencyManagement>
  
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-source-plugin</artifactId>
  			<version>${maven.source.plugin}</version>
  			<executions>
  				<execution>
  					<id>attach-sources</id>
  					<goals>
  						<goal>jar-no-fork</goal>
  					</goals>
  				</execution>
  			</executions>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-javadoc-plugin</artifactId>
  			<version>${maven.javadoc.plugin}</version>
  			<executions>
  				<execution>
  					<id>attach-javadocs</id>
  					<goals>
  						<goal>jar</goal>
  					</goals>
  				</execution>
  			</executions>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-gpg-plugin</artifactId>
  			<version>${maven.gpg.plugin}</version>
  			<executions>
  				<execution>
  					<id>sign-artifacts</id>
  					<phase>deploy</phase>
  					<goals>
  						<goal>sign</goal>
  					</goals>
  				</execution>
  			</executions>
  		</plugin>
  		<plugin>
  			<groupId>org.codehaus.mojo</groupId>
  			<artifactId>cobertura-maven-plugin</artifactId>
  			<version>${cobertura.version}</version>
  			<configuration>
  				<formats>
  					<format>html</format>
  					<format>xml</format>
  				</formats>
  				<check>
  					<totalLineRate>90</totalLineRate>
  					<haltOnFailure>true</haltOnFailure>
  				</check>
  			</configuration>
  			<executions>
  				<execution>
  					<phase>package</phase>
  					<goals>
  						<goal>cobertura</goal>
  						<goal>check</goal>
  					</goals>
  				</execution>
  			</executions>
  		</plugin>
  	</plugins>
  </build>
  
  <reporting>
  	<plugins>
  		<plugin>
  			<groupId>org.codehaus.mojo</groupId>
  			<artifactId>cobertura-maven-plugin</artifactId>
  			<version>${cobertura.version}</version>
  		</plugin>
  	</plugins>
  </reporting>

  <licenses>
  	<license>
  		<name>The Apache Software License, Version 2.0</name>
  		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
  	</license>
  </licenses>
  
  <developers>
  	<developer>
  		<id>robson-sanchez</id>
  		<name>Robson Vinícius Vieira Sanchez</name>
  		<email>robsonvinicius@gmail.com</email>
  		<url>https://github.com/robson-sanchez</url>
  		<roles>
  			<role>Software Architect</role>
  		</roles>
  	</developer>
  </developers>
  
  <scm>
  	<connection>scm:git:git@github.com:robson-sanchez/java-webhook-publisher.git</connection>
  	<developerConnection>scm:git:git@github.com:robson-sanchez/java-webhook-publisher.git</developerConnection>
  	<url>https://github.com/robson-sanchez/java-webhook-publisher</url>
  </scm>
  
  <distributionManagement>
  	<repository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
  	</repository>
  	<snapshotRepository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
  	</snapshotRepository>
  </distributionManagement>
  
</project>